--- a/org.jrebirth.af/distribution/pom.xml
+++ b/org.jrebirth.af/distribution/pom.xml
@@ -39,6 +39,27 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>wagon-maven-plugin</artifactId>
+				<version>1.0</version>
+				<executions>
+					<execution>
+						<id>deploy-webstart-archive</id>
+						<phase>site-deploy</phase>
+						<goals>
+							<goal>upload-single</goal>
+						</goals>
+						<configuration>
+							<serverId>JRebirth_Sites</serverId>
+							<url>scp://s143909802.onlinehome.fr/kunden/homepages/14/d143909784/htdocs/jrebirth/apps</url>
+							<fromFile>${project.build.directory}/JRebirth-${project.version}.tar.gz</fromFile>
+							<toFile>org.jrebirth.af/JRebirth-${project.version}.tar.gz</toFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 
 	</build>
