Create tooling modules

--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -42,6 +42,7 @@
 		<module>fxform</module>
 		<module>undoredo</module>
 		<module>showcase</module>
+		<module>tooling</module>
 		<module>preloader</module>
 		<module>processor</module>
 		<module>security</module>
