--- a/org.jrebirth.af/processor/pom.xml
+++ b/org.jrebirth.af/processor/pom.xml
@@ -71,6 +71,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.jrebirth.af.tools</groupId>
+			<artifactId>codegen</artifactId>
+			<version>8.5.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-model</artifactId>
 			<version>3.3.9</version>
