--- a/org.jrebirth.af/showcase/workbench/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/showcase/workbench/src/main/resources/jrebirth.properties
@@ -17,7 +17,7 @@ closeRetryDelayFirst=4000
 closeRetryDelayOther=1000
 threadPoolSizeRatio=2
 waveHandlerPrefix=DO_
-notAvailableImage=image/||NotAvailable||png
+notAvailableImage=NotAvailable||png
 applicationName={} powered by JRebirth
 
 ## The factory used to create components.
