--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -233,7 +233,17 @@
 					</execution>
 				</executions>
 			</plugin>
-
+			
+			<!-- Add Headless test engine, require open-jfx-monocle.jar deployed into jdk/jre/lib/ext -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<argLine>-Dtestfx.robot=glass -Dglass.platform=Monocle -Dmonocle.platform=Headless -Dprism.order=sw</argLine>
+				</configuration>
+			</plugin>
+			
 			<!-- Project Quality -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
