Fix Demo shaded jar, 'services' file shall be merged too

--- a/org.jrebirth.af/showcase/demo/pom.xml
+++ b/org.jrebirth.af/showcase/demo/pom.xml
@@ -121,6 +121,7 @@
 									<Class-Path>.</Class-Path>
 								</manifestEntries>
 							</transformer>
+							<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
 						</transformers>
 						<finalName>${archiveName}-${project.version}</finalName>
 					</configuration>
