--- a/org.jrebirth.af/showcase/pom.xml
+++ b/org.jrebirth.af/showcase/pom.xml
@@ -53,6 +53,8 @@
 		<module>undoredo</module>
 		<module>fxml</module>
 		<module>wave</module>
+		<module>todos</module>
+		<module>data</module>
 		<module>workbench</module>
 	</modules>
 
