--- a/org.jrebirth.af/showcase/pom.xml
+++ b/org.jrebirth.af/showcase/pom.xml
@@ -54,7 +54,7 @@
 		<module>fxml</module>
 		<module>wave</module>
 		<module>todos</module>
-		<module>data</module>
+		<!-- <module>data</module> -->
 		<module>workbench</module>
 	</modules>
 
