--- a/org.jrebirth.af/showcase/todos/pom.xml
+++ b/org.jrebirth.af/showcase/todos/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -25,6 +26,7 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>webstart-maven-plugin</artifactId>
@@ -36,7 +38,7 @@
 				<version>8.5.1-SNAPSHOT</version>
 				<configuration>
 					<ecoreFile>model/Todos.ecore</ecoreFile>
-					<outputDirectory>target/generated-sources/</outputDirectory>
+					<outputDirectory>target/generated-sources/model</outputDirectory>
 				</configuration>
 				<executions>
 					<execution>
@@ -44,6 +46,24 @@
 						<goals>
 							<goal>ecore2fx</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>target/generated-sources/model</source>
+							</sources>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
