Add FontIcon and Todos modules

--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -49,6 +49,7 @@
 		<module>distribution</module>
 		<module>rest</module>
 		<module>resources</module>
+		<module>iconfont-bridge</module>
 	</modules>
 
 	<issueManagement>
