--- a/org.jrebirth.af/iconfont-bridge/fontawesome/.project
+++ b/org.jrebirth.af/iconfont-bridge/fontawesome/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jrebirth.af.showcase.workbench</name>
+	<name>org.jrebirth.af.showcase.iconfont-bridge.fontawesome</name>
 	<comment></comment>
 	<projects>
 	</projects>
