--- a/org.jrebirth.af/showcase/fonticon/pom.xml
+++ b/org.jrebirth.af/showcase/fonticon/pom.xml
@@ -46,6 +46,31 @@
 			<artifactId>fontawesome</artifactId>
 			<version>8.5.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jrebirth.af.iconfont-bridge</groupId>
+			<artifactId>525icons</artifactId>
+			<version>8.5.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jrebirth.af.iconfont-bridge</groupId>
+			<artifactId>emojione</artifactId>
+			<version>8.5.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jrebirth.af.iconfont-bridge</groupId>
+			<artifactId>weathericons</artifactId>
+			<version>8.5.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jrebirth.af.iconfont-bridge</groupId>
+			<artifactId>typicons</artifactId>
+			<version>8.5.1-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
