--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>organization</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>2.1.1</version>
 	</parent>
 
 	<artifactId>af</artifactId>
-	<version>8.6.0-SNAPSHOT</version>
+	<version>8.7.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
