--- a/org.jrebirth.af/tooling/ecore2fx/pom.xml
+++ b/org.jrebirth.af/tooling/ecore2fx/pom.xml
@@ -17,25 +17,25 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>20.0</version>
+			<version>27.0.1-jre</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.common</artifactId>
-			<version>2.11.0-v20150805-0538</version>
+			<version>2.15.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.ecore</artifactId>
-			<version>2.11.1-v20150805-0538</version>
+			<version>2.15.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
 			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
-			<version>2.11.1-v20150805-0538</version>
+			<version>2.15.0</version>
 		</dependency>
 
 		<dependency>
